<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/broadcastBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BroadcastReceiver_button" />

    <Button
        android:id="@+id/serviceBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Service_button" />

    <Button
        android:id="@+id/contentProviderBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ContentProvider_button" />


</LinearLayout>